--- a/apps/AdminComposite/AdminComposite.csproj
+++ b/apps/AdminComposite/AdminComposite.csproj
@@ -123,9 +123,10 @@
     <Content Include="Content\multiselect\jquery.multiselect.min.js" />
     <Content Include="Content\multiselect\prettify.css" />
     <Content Include="Content\multiselect\prettify.js" />
-    <Content Include="Content\scripts.js" />
+    <Content Include="Content\admin-ui.js" />
     <Content Include="Content\multiselect\style.css" />
     <Compile Include="Controllers\BadgeController.cs" />
+    <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\DashboardController.cs" />
     <Compile Include="Controllers\ForumController.cs" />
     <Compile Include="Controllers\ModerationController.cs" />
@@ -440,7 +441,7 @@
     <Content Include="Views\Organization\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Shared\_NewOrganizationUser.cshtml" />
+    <Content Include="Views\Shared\_OrganizationUserForm.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Shared\LeftRail\_AnonymousUserNavigation.cshtml" />
@@ -467,13 +468,13 @@
     <Content Include="Views\Forum\AuthenticationProviders.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Forum\ForumSettings.cshtml" />
+    <Content Include="Views\Forum\Settings.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Forum\ForumCategories.cshtml" />
+    <Content Include="Views\Category\List.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Forum\_NewCategory.cshtml" />
+    <Content Include="Views\Category\_NewCategory.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
