implementation of MultipleMessageProcessor including test coverage. this type is used for aggregate roots. further tests and examples forthcoming.

--- a/tests/Euclid.Common.TestingFakes/Euclid.Common.TestingFakes.csproj
+++ b/tests/Euclid.Common.TestingFakes/Euclid.Common.TestingFakes.csproj
@@ -75,6 +75,7 @@
   <ItemGroup>
     <Compile Include="Configuration\FakeSettingModes.cs" />
     <Compile Include="Configuration\FakeSettings.cs" />
+    <Compile Include="Messaging\FakeMultipleMessageProcessor.cs" />
     <Compile Include="Registry\FakeMessage.cs" />
     <Compile Include="Registry\FakePublicationRecord.cs" />
     <Compile Include="Registry\FakeRegistry.cs" />
