--- a/apps/AdminComposite/AdminComposite.csproj
+++ b/apps/AdminComposite/AdminComposite.csproj
@@ -139,7 +139,9 @@
     <Compile Include="Controllers\ForumController.cs" />
     <Compile Include="Controllers\ModerationController.cs" />
     <Compile Include="Controllers\OrganizationController.cs" />
+    <Compile Include="Controllers\ThemeController.cs" />
     <Compile Include="Controllers\UserController.cs" />
+    <Compile Include="Controllers\VotingSchemeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -504,6 +506,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Dashboard\GetConfirmationMessage.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\VotingScheme\List.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Theme\List.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
