remove unused files, make local copies of jeditiable, clean up editing organizations

--- a/apps/AdminComposite/AdminComposite.csproj
+++ b/apps/AdminComposite/AdminComposite.csproj
@@ -125,7 +125,9 @@
     <Content Include="Content\chromatron\js\jquery\jquery.nyroModal.custom.js" />
     <Content Include="Content\chromatron\js\jquery\jquery.nyromodal.js" />
     <Content Include="Content\clear.gif" />
-    <Content Include="Content\jquery.simplemodal.1.4.1.min.js" />
+    <Content Include="Content\jeditable\jquery.jeditable.js" />
+    <Content Include="Content\jeditable\jquery.jeditable.mini.js" />
+    <Content Include="Content\simplemodal\jquery.simplemodal.1.4.1.min.js" />
     <Content Include="Content\multiselect\jquery.multiselect.css" />
     <Content Include="Content\multiselect\jquery.multiselect.min.js" />
     <Content Include="Content\multiselect\prettify.css" />
@@ -258,8 +260,8 @@
     <Content Include="Content\chromatron\js\login.js" />
     <Content Include="Content\chromatron\js\script.js" />
     <Content Include="Content\sample_user_icon.png" />
-    <Content Include="Content\jquery.simplemodal.1.4.1.css" />
-    <Content Include="Content\jquery.simplemodal.1.4.1-close.png" />
+    <Content Include="Content\simplemodal\jquery.simplemodal.1.4.1.css" />
+    <Content Include="Content\simplemodal\jquery.simplemodal.1.4.1-close.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_flat_75_ffffff_40x100.png" />
     <Content Include="Content\themes\base\images\ui-bg_glass_55_fbf9ee_1x400.png" />
@@ -319,6 +321,7 @@
     <Content Include="Content\thumb-down.png" />
     <Content Include="Content\thumb-up.png" />
     <Content Include="Content\jquery.url-encode.js" />
+    <Content Include="Content\viewport\jquery.viewport.js" />
     <Content Include="Global.asax" />
     <Content Include="Scripts\jquery-1.6.3-vsdoc.js" />
     <Content Include="Scripts\jquery-1.6.3.js" />
