--- a/apps/AdminComposite/AdminComposite.csproj
+++ b/apps/AdminComposite/AdminComposite.csproj
@@ -128,12 +128,7 @@
     <Content Include="Content\jeditable\jquery.jeditable.js" />
     <Content Include="Content\jeditable\jquery.jeditable.mini.js" />
     <Content Include="Content\simplemodal\jquery.simplemodal.1.4.1.min.js" />
-    <Content Include="Content\multiselect\jquery.multiselect.css" />
-    <Content Include="Content\multiselect\jquery.multiselect.min.js" />
-    <Content Include="Content\multiselect\prettify.css" />
-    <Content Include="Content\multiselect\prettify.js" />
     <Content Include="Content\admin-ui.js" />
-    <Content Include="Content\multiselect\style.css" />
     <Compile Include="Controllers\BadgeController.cs" />
     <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\ContentController.cs" />
@@ -511,6 +506,15 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Forum\Details.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Content\forum-admin\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Content\_wysiwg.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Content\_default.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
