--- a/apps/AdminComposite/Web.config
+++ b/apps/AdminComposite/Web.config
@@ -34,7 +34,8 @@
 			<forms loginUrl="~/Account/LogOn" timeout="2880" />
 		</authentication>
 		<httpRuntime requestValidationMode="2.0" />
-		<pages validateRequest="false">
+		<pages
+			validateRequest="false">
 			<namespaces>
 				<add namespace="System.Web.Helpers" />
 				<add namespace="System.Web.Mvc" />
