--- a/apps/ForumAgent/ForumAgent.csproj
+++ b/apps/ForumAgent/ForumAgent.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper">
+      <HintPath>..\..\packages\AutoMapper.2.0.0\lib\net40-client\AutoMapper.dll</HintPath>
+    </Reference>
     <Reference Include="FluentNHibernate, Version=1.3.0.717, Culture=neutral, PublicKeyToken=8aa435e3cb308880, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\FluentNHibernate.1.3.0.717\lib\FluentNHibernate.dll</HintPath>
@@ -52,12 +55,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AgentInfo.cs" />
+    <Compile Include="Commands\CreateOrganizationAndRegisterUser.cs" />
+    <Compile Include="Commands\RegisterForumUser.cs" />
+    <Compile Include="Commands\RegisterOrganizationUser.cs" />
     <Compile Include="Commands\CommentOnPost.cs" />
     <Compile Include="Commands\CreateForum.cs" />
     <Compile Include="Commands\PublishPost.cs" />
-    <Compile Include="Commands\RegisterUser.cs" />
     <Compile Include="Processors\CreateForumProcessor.cs" />
-    <Compile Include="Processors\RegisterUserProcessor.cs" />
+    <Compile Include="Processors\CreateOrganizationAndRegisterUserProcessor.cs" />
+    <Compile Include="Processors\RegisterForumUserProcessor.cs" />
     <Compile Include="Commands\UpdateUserProfile.cs" />
     <Compile Include="Processors\UpdateUserProfileProcessor.cs" />
     <Compile Include="Commands\VoteOnComment.cs" />
@@ -69,18 +75,28 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queries\CommentQueries.cs" />
     <Compile Include="Queries\ForumQueries.cs" />
+    <Compile Include="Queries\OrganizationUserQueries.cs" />
     <Compile Include="Queries\PostQueries.cs" />
     <Compile Include="Queries\UserQueries.cs" />
     <Compile Include="ReadModels\Comment.cs" />
     <Compile Include="ReadModels\Forum.cs" />
     <Compile Include="ReadModels\Organization.cs" />
+    <Compile Include="ReadModels\OrganizationUser.cs" />
     <Compile Include="ReadModels\Post.cs" />
     <Compile Include="ReadModels\PostDetail.cs" />
     <Compile Include="ReadModels\PostListing.cs" />
-    <Compile Include="ReadModels\User.cs" />
+    <Compile Include="ReadModels\ForumUser.cs" />
     <Compile Include="ReadModels\UserProfile.cs" />
+    <Compile Include="WriteModels\DomainOrganizationUser.cs" />
+    <Compile Include="WriteModels\DomainOrganization.cs" />
+    <Compile Include="WriteModels\OrganizationMap.cs" />
+    <Compile Include="WriteModels\OrganizationUserMap.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\src\common\Euclid.Common.Messaging\Euclid.Common.Messaging.csproj">
+      <Project>{4F499249-B39C-4DD2-A75C-FE768E90579F}</Project>
+      <Name>Euclid.Common.Messaging</Name>
+    </ProjectReference>
     <ProjectReference Include="..\..\src\common\Euclid.Common.Storage.NHibernate\Euclid.Common.Storage.NHibernate.csproj">
       <Project>{A5B72DFB-6698-420C-ADCC-3F2D28C4F65E}</Project>
       <Name>Euclid.Common.Storage.NHibernate</Name>
@@ -108,6 +124,10 @@
     <ProjectReference Include="..\..\src\framework\Euclid.Framework\Euclid.Framework.csproj">
       <Project>{8BA2EA0C-2220-4390-A87C-79E96E40DFD0}</Project>
       <Name>Euclid.Framework</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\src\sdk\Euclid.Composites\Euclid.Composites.csproj">
+      <Project>{12029AA6-F05C-4DC6-B76E-C3798BCAC68D}</Project>
+      <Name>Euclid.Composites</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
