--- a/apps/AdminComposite/Web.config
+++ b/apps/AdminComposite/Web.config
@@ -31,7 +31,9 @@
 			</assemblies>
 		</compilation>
 		<authentication mode="Forms">
-			<forms loginUrl="~/Account/LogOn" timeout="2880" />
+			<forms 
+				loginUrl="~/User/Signin" 
+				timeout="2880" />
 		</authentication>
 		<httpRuntime requestValidationMode="2.0" />
 		<pages
