--- a/apps/AdminComposite/AdminComposite.csproj
+++ b/apps/AdminComposite/AdminComposite.csproj
@@ -142,7 +142,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="HtmlHelpers\HtmlHelperExtensions.cs" />
+    <Compile Include="Extensions\DateTimeExtension.cs" />
+    <Compile Include="Extensions\HtmlHelperExtensions.cs" />
     <Compile Include="Models\CreateForumInputModel.cs" />
     <Compile Include="Models\CreateOrganizationAndUserInputModel.cs" />
     <Compile Include="ActionFilters\NavigationViewBagInjector.cs" />
@@ -454,7 +455,7 @@
     <Content Include="Views\Organization\ListUsers.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Shared\_OrganizationUserForm.cshtml" />
+    <Content Include="Views\Organization\_RegisterOrganizationUser.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Shared\_ModeratorPanel.cshtml" />
@@ -524,6 +525,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\User\ForgotPassword.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Organization\_UpdateOrganizationUser.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
