--- a/apps/AdminComposite/Web.config
+++ b/apps/AdminComposite/Web.config
@@ -11,7 +11,7 @@
 		<!--
 		<add name="forum-db" connectionString="Data Source=.;Initial Catalog=Forum-db;Integrated Security=SSPI;Persist Security Info=False;" />
 		-->
-		<add name="forum-db" connectionString="Data Source=.;Initial Catalog=forum-db;Integrated Security=SSPI;Persist Security Info=False;" />
+		<add name="forum-db" connectionString="Data Source=.\SQLExpress;Initial Catalog=forum-db;Integrated Security=SSPI;Persist Security Info=False;" />
 	</connectionStrings>
 	<appSettings>
 		<add key="webpages:Version" value="1.0.0.0" />
