--- a/src/sdk/AgentConsole/app.config
+++ b/src/sdk/AgentConsole/app.config
@@ -10,7 +10,7 @@
 		<!--
 		<add name="forum-db" connectionString="Data Source=.;Initial Catalog=Forum-db;Integrated Security=SSPI;Persist Security Info=False;" />
 		-->
-		<add name="forum-db" connectionString="Data Source=.;Initial Catalog=forum-db;Integrated Security=SSPI;Persist Security Info=False;" />
+		<add name="forum-db" connectionString="Data Source=.\SQLExpress;Initial Catalog=forum-db;Integrated Security=SSPI;Persist Security Info=False;" />
 	</connectionStrings>
 	<appSettings>
 		<add key="DataConnectionString" value="UseDevelopmentStorage=true" />
@@ -74,7 +74,7 @@
 			<!--
 			<connectionString value="Data Source=.;Initial Catalog=Forum-db;Integrated Security=SSPI;Persist Security Info=False;" />
 			-->
-			<connectionString value="Data Source=.;Initial Catalog=Forum-db;Integrated Security=SSPI;Persist Security Info=False;" />
+			<connectionString value="Data Source=.\SQLExpress;Initial Catalog=Forum-db;Integrated Security=SSPI;Persist Security Info=False;" />
 			<commandText value="INSERT INTO LogEntry ([Date],[Thread],[Level],[Logger],[Message],[Exception],[Identifier],[Created],[Modified],[LoggingSource]) VALUES (@log_date, @thread, @log_level, @logger, @message, @exception,newid(), getdate(), getdate(), 'Hosting Fabric')" />
 			<parameter>
 				<parameterName value="@log_date" />
