--- a/apps/AdminComposite/AdminComposite.csproj
+++ b/apps/AdminComposite/AdminComposite.csproj
@@ -130,6 +130,7 @@
     <Content Include="Content\jeditable\jquery.jeditable.mini.js" />
     <Content Include="Content\simplemodal\jquery.simplemodal.1.4.1.min.js" />
     <Content Include="Content\admin-ui.js" />
+    <Compile Include="Controllers\AuthenticationController.cs" />
     <Compile Include="Extensions\FilterContextExtensions.cs" />
     <Compile Include="Controllers\BadgeController.cs" />
     <Compile Include="Controllers\CategoryController.cs" />
@@ -139,7 +140,7 @@
     <Compile Include="Controllers\ModerationController.cs" />
     <Compile Include="Controllers\OrganizationController.cs" />
     <Compile Include="Controllers\ThemeController.cs" />
-    <Compile Include="Controllers\UserController.cs" />
+    <Compile Include="Controllers\UserProfileController.cs" />
     <Compile Include="Controllers\VotingSchemeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -150,9 +151,11 @@
     <Compile Include="Models\CreateOrganizationAndRegisterUserInputModel.cs" />
     <Compile Include="ActionFilters\PopulateAdminWideViewBag.cs" />
     <Compile Include="Models\RegisterOrganizationUserInputModel.cs" />
+    <Compile Include="Models\UpdateForumInputModel.cs" />
     <Compile Include="Models\UpdateOrganizationInputModel.cs" />
     <Compile Include="Models\UpdateOrganizationUserInputModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Models\RegisterForumUserInputModel.cs" />
     <Compile Include="WebRole.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -438,31 +441,28 @@
     <Content Include="Views\Forum\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\User\Create.cshtml" />
+    <Content Include="Views\Authentication\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\User\Details.cshtml" />
+    <Content Include="Views\UserProfile\_Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\User\Invite.cshtml" />
+    <Content Include="Views\UserProfile\_Invite.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\User\List.cshtml" />
+    <Content Include="Views\UserProfile\List.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\User\Signin.cshtml" />
+    <Content Include="Views\Authentication\Signin.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\User\Signout.cshtml" />
+    <Content Include="Views\Authentication\Signout.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Organization\ListUsers.cshtml" />
+    <Content Include="Views\Organization\Users.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Organization\_RegisterOrganizationUser.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\Shared\_ModeratorPanel.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Badge\List.cshtml" />
@@ -487,9 +487,6 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Content\NewContent.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\Shared\_ForumDetails.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Dashboard\GetConfirmationMessageAttributesMissingMessage.cshtml" />
@@ -519,19 +516,19 @@
     <Content Include="Views\Content\_default.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\User\Created.cshtml" />
+    <Content Include="Views\Authentication\_AnonymousLayout.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Shared\_AnonymousLayout.cshtml" />
+    <Content Include="Views\Authentication\_AnonymousUserNavigation.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Shared\LeftRail\_AnonymousUserNavigation.cshtml" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Views\User\ForgotPassword.cshtml" />
+    <Content Include="Views\Authentication\ForgotPassword.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Organization\_UpdateOrganizationUser.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Authentication\DoSignout.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
