--- a/apps/AdminComposite/AdminComposite.csproj
+++ b/apps/AdminComposite/AdminComposite.csproj
@@ -149,12 +149,13 @@
     </Compile>
     <Compile Include="Extensions\DateTimeExtension.cs" />
     <Compile Include="Extensions\HtmlHelperExtensions.cs" />
-    <Compile Include="Models\BlockUserInputModel.cs" />
+    <Compile Include="Models\CreateCategoryInputModel.cs" />
     <Compile Include="Models\CreateForumInputModel.cs" />
     <Compile Include="Models\CreateOrganizationAndRegisterUserInputModel.cs" />
     <Compile Include="ActionFilters\PopulateAdminWideViewBag.cs" />
     <Compile Include="Models\RegisterOrganizationUserInputModel.cs" />
     <Compile Include="Models\SetVotingSchemeInputModel.cs" />
+    <Compile Include="Models\UpdateCategoryInputModel.cs" />
     <Compile Include="Models\UpdateForumInputModel.cs" />
     <Compile Include="Models\UpdateOrganizationInputModel.cs" />
     <Compile Include="Models\UpdateOrganizationUserInputModel.cs" />
@@ -537,6 +538,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Authentication\DoSignout.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Category\_UpdateCategory.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
