--- a/apps/ForumAgent/ForumAgent.csproj
+++ b/apps/ForumAgent/ForumAgent.csproj
@@ -56,12 +56,17 @@
   <ItemGroup>
     <Compile Include="AgentInfo.cs" />
     <Compile Include="Commands\BlockUser.cs" />
+    <Compile Include="CategoryNotFoundException.cs" />
+    <Compile Include="Commands\CreateCategory.cs" />
+    <Compile Include="Processors\CreateCategoryProcessor.cs" />
     <Compile Include="Commands\CreateOrganizationAndRegisterUser.cs" />
     <Compile Include="Commands\RegisterForumUser.cs" />
     <Compile Include="Commands\RegisterOrganizationUser.cs" />
     <Compile Include="Commands\CommentOnPost.cs" />
     <Compile Include="Commands\CreateForum.cs" />
     <Compile Include="Commands\PublishPost.cs" />
+    <Compile Include="Commands\UpdateCategory.cs" />
+    <Compile Include="Processors\UpdateCategoryProcessor.cs" />
     <Compile Include="Commands\UpdateForum.cs" />
     <Compile Include="Commands\UpdateForumVotingScheme.cs" />
     <Compile Include="Commands\UpdateLastLogin.cs" />
@@ -88,12 +93,14 @@
     <Compile Include="Processors\VoteOnCommentProcessor.cs" />
     <Compile Include="Processors\VoteOnPostProcessor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Queries\CategoryQueries.cs" />
     <Compile Include="Queries\CommentQueries.cs" />
     <Compile Include="Queries\ForumQueries.cs" />
     <Compile Include="Queries\OrganizationQueries.cs" />
     <Compile Include="Queries\OrganizationUserQueries.cs" />
     <Compile Include="Queries\PostQueries.cs" />
     <Compile Include="Queries\UserQueries.cs" />
+    <Compile Include="ReadModels\Category.cs" />
     <Compile Include="ReadModels\Comment.cs" />
     <Compile Include="ReadModels\Forum.cs" />
     <Compile Include="ReadModels\Organization.cs" />
