create, delete, preview content

--- a/apps/AdminComposite/Web.config
+++ b/apps/AdminComposite/Web.config
@@ -32,7 +32,7 @@
 		</compilation>
 		<authentication mode="Forms">
 			<forms 
-				loginUrl="~/User/Signin" 
+				loginUrl="~/Authentication/Signin" 
 				timeout="2880" />
 		</authentication>
 		<httpRuntime requestValidationMode="2.0" />
