--- a/apps/AdminComposite/AdminComposite.csproj
+++ b/apps/AdminComposite/AdminComposite.csproj
@@ -150,6 +150,7 @@
     <Compile Include="Extensions\DateTimeExtension.cs" />
     <Compile Include="Extensions\HtmlHelperExtensions.cs" />
     <Compile Include="Models\CreateCategoryInputModel.cs" />
+    <Compile Include="Models\CreateForumContentInputModel.cs" />
     <Compile Include="Models\CreateForumInputModel.cs" />
     <Compile Include="Models\CreateOrganizationAndRegisterUserInputModel.cs" />
     <Compile Include="ActionFilters\PopulateAdminWideViewBag.cs" />
@@ -492,10 +493,10 @@
     <Content Include="Views\Category\_NewCategory.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Content\ForForum.cshtml" />
+    <Content Include="Views\Content\List.cshtml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Views\Content\NewContent.cshtml" />
+    <Content Include="Views\Content\_NewContent.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Dashboard\GetConfirmationMessageAttributesMissingMessage.cshtml" />
@@ -541,6 +542,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Category\_UpdateCategory.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Content\_UpdateContent.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\Content\_preview.cshtml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
