--- a/apps/ForumComposite/Web.config
+++ b/apps/ForumComposite/Web.config
@@ -11,7 +11,7 @@
 		<!--
 		<add name="forum-db" connectionString="Data Source=.;Initial Catalog=Forum-db;Integrated Security=SSPI;Persist Security Info=False;" />
 		-->
-		<add name="forum-db" connectionString="Data Source=.;Initial Catalog=forum-db;Integrated Security=SSPI;Persist Security Info=False;" />
+		<add name="forum-db" connectionString="Data Source=.\SQLExpress;Initial Catalog=forum-db;Integrated Security=SSPI;Persist Security Info=False;" />
 	</connectionStrings>
 	<appSettings>
 		<add key="webpages:Version" value="1.0.0.0" />
@@ -72,7 +72,7 @@
 			<!--
 			<connectionString value="Data Source=.;Initial Catalog=Forum-db;Integrated Security=SSPI;Persist Security Info=False;" />
 			-->
-			<connectionString value="Data Source=.;Initial Catalog=Forum-db;Integrated Security=SSPI;Persist Security Info=False;" />
+			<connectionString value="Data Source=.\SQLExpress;Initial Catalog=Forum-db;Integrated Security=SSPI;Persist Security Info=False;" />
 			<commandText value="INSERT INTO LogEntry ([Date],[Thread],[Level],[Logger],[Message],[Exception],[Identifier],[Created],[Modified],[LoggingSource]) VALUES (@log_date, @thread, @log_level, @logger, @message, @exception,newid(), getdate(), getdate(), 'Forum Composite')" />
 			<parameter>
 				<parameterName value="@log_date" />
