--- a/apps/ForumAgent/ForumAgent.csproj
+++ b/apps/ForumAgent/ForumAgent.csproj
@@ -57,7 +57,13 @@
     <Compile Include="AgentInfo.cs" />
     <Compile Include="Commands\ActivateCategory.cs" />
     <Compile Include="Commands\ActivateContent.cs" />
+    <Compile Include="Commands\ApprovePost.cs" />
+    <Compile Include="Commands\ForumModerated.cs" />
+    <Compile Include="Commands\RejectPost.cs" />
     <Compile Include="Commands\SetForumTheme.cs" />
+    <Compile Include="Processors\ApprovePostProcessor.cs" />
+    <Compile Include="PostNotFoundException.cs" />
+    <Compile Include="Processors\RejectPostProcessor.cs" />
     <Compile Include="Processors\SetForumThemeProcessor.cs" />
     <Compile Include="Processors\ActivateCategoryProcessor.cs" />
     <Compile Include="Processors\ActivateContentProcessor.cs" />
@@ -104,6 +110,9 @@
     <Compile Include="Commands\VoteOnPost.cs" />
     <Compile Include="Processors\CommentOnPostProcessor.cs" />
     <Compile Include="Processors\PublishPostProcessor.cs" />
+    <Compile Include="Queries\ModeratedPostQueries.cs" />
+    <Compile Include="ReadModels\ModeratedPosts.cs" />
+    <Compile Include="ReadModels\ModeratedPost.cs" />
     <Compile Include="UserNotFoundException.cs" />
     <Compile Include="Processors\VoteOnCommentProcessor.cs" />
     <Compile Include="Processors\VoteOnPostProcessor.cs" />
