added nconfig to agent console

--- a/src/sdk/AgentConsole/Config/sparrow.custom.config
+++ b/src/sdk/AgentConsole/Config/sparrow.custom.config
@@ -7,7 +7,7 @@
 		<supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
 	</startup>
 	<connectionStrings>
-		<add name="forum-db" connectionString="{custom}" />
+		<add name="forum-db" connectionString="Data Source=.;Initial Catalog=forum-db;Integrated Security=SSPI;Persist Security Info=False;" />
 	</connectionStrings>
 	<appSettings>
 		<add key="DataConnectionString" value="UseDevelopmentStorage=true" />
