--- a/apps/ForumComposite/Web.config
+++ b/apps/ForumComposite/Web.config
@@ -4,119 +4,114 @@
   http://go.microsoft.com/fwlink/?LinkId=152368
   -->
 <configuration>
-	<configSections>
-		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
-	</configSections>
-	<connectionStrings>
-		<!--
-		<add name="forum-db" connectionString="Data Source=.;Initial Catalog=Forum-db;Integrated Security=SSPI;Persist Security Info=False;" />
-		-->
-		<add name="forum-db" connectionString="Data Source=.\SQLExpress;Initial Catalog=forum-db;Integrated Security=SSPI;Persist Security Info=False;" />
-	</connectionStrings>
-	<appSettings>
-		<add key="webpages:Version" value="1.0.0.0" />
-		<add key="ClientValidationEnabled" value="true" />
-		<add key="UnobtrusiveJavaScriptEnabled" value="true" />
-		<add key="DataConnectionString" value="UseDevelopmentStorage=true" />
-		<add key="log4net.Internal.Debug" value="false" />
-	</appSettings>
-	<system.web>
-		<compilation debug="true" targetFramework="4.0">
-			<assemblies>
-				<add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-				<add assembly="System.Web.Helpers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-				<add assembly="System.Web.Routing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-				<add assembly="System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-				<add assembly="System.Web.WebPages, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-			</assemblies>
-		</compilation>
-		<authentication mode="Forms">
-			<forms loginUrl="~/Account/LogOn" timeout="2880" />
-		</authentication>
-		<pages>
-			<namespaces>
-				<add namespace="System.Web.Helpers" />
-				<add namespace="System.Web.Mvc" />
-				<add namespace="System.Web.Mvc.Ajax" />
-				<add namespace="System.Web.Mvc.Html" />
-				<add namespace="System.Web.Routing" />
-				<add namespace="System.Web.WebPages" />
-			</namespaces>
-		</pages>
-		<trace writeToDiagnosticsTrace="true" enabled="false" pageOutput="false" />
-	</system.web>
-	<system.webServer>
-		<modules runAllManagedModulesForAllRequests="true">
-			<add name="PerRequestLifestyle" type="Castle.MicroKernel.Lifestyle.PerWebRequestLifestyleModule, Castle.Windsor" />
-		</modules>
-	</system.webServer>
-	<runtime>
-		<assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-			<dependentAssembly>
-				<assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-				<bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="3.0.0.0" />
-			</dependentAssembly>
-		</assemblyBinding>
-	</runtime>
-	<log4net>
-		<root>
-			<priority value="INFO" />
-			<appender-ref ref="AdoNetAppender" />
-		</root>
-		<logger name="NHibernate">
-			<level value="ERROR" />
-		</logger>
-		<appender name="AdoNetAppender" type="log4net.Appender.AdoNetAppender">
-			<bufferSize value="1" />
-			<connectionType value="System.Data.SqlClient.SqlConnection, System.Data, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-			<!--
-			<connectionString value="Data Source=.;Initial Catalog=Forum-db;Integrated Security=SSPI;Persist Security Info=False;" />
-			-->
-			<connectionString value="Data Source=.\SQLExpress;Initial Catalog=Forum-db;Integrated Security=SSPI;Persist Security Info=False;" />
-			<commandText value="INSERT INTO LogEntry ([Date],[Thread],[Level],[Logger],[Message],[Exception],[Identifier],[Created],[Modified],[LoggingSource]) VALUES (@log_date, @thread, @log_level, @logger, @message, @exception,newid(), getdate(), getdate(), 'Forum Composite')" />
-			<parameter>
-				<parameterName value="@log_date" />
-				<dbType value="DateTime" />
-				<layout type="log4net.Layout.RawTimeStampLayout" />
-			</parameter>
-			<parameter>
-				<parameterName value="@thread" />
-				<dbType value="String" />
-				<size value="255" />
-				<layout type="log4net.Layout.PatternLayout">
-					<conversionPattern value="%thread" />
-				</layout>
-			</parameter>
-			<parameter>
-				<parameterName value="@log_level" />
-				<dbType value="String" />
-				<size value="50" />
-				<layout type="log4net.Layout.PatternLayout">
-					<conversionPattern value="%level" />
-				</layout>
-			</parameter>
-			<parameter>
-				<parameterName value="@logger" />
-				<dbType value="String" />
-				<size value="255" />
-				<layout type="log4net.Layout.PatternLayout">
-					<conversionPattern value="%logger" />
-				</layout>
-			</parameter>
-			<parameter>
-				<parameterName value="@message" />
-				<dbType value="String" />
-				<size value="4000" />
-				<layout type="log4net.Layout.PatternLayout">
-					<conversionPattern value="%message" />
-				</layout>
-			</parameter>
-			<parameter>
-				<parameterName value="@exception" />
-				<dbType value="String" />
-				<size value="2000" />
-				<layout type="log4net.Layout.ExceptionLayout" />
-			</parameter>
-		</appender>
-	</log4net>
+  <configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
+  </configSections>
+  <connectionStrings>
+    <add name="forum-db" connectionString="Data Source=.;Initial Catalog=forum-db;Integrated Security=SSPI;Persist Security Info=False;" />
+  </connectionStrings>
+  <appSettings>
+    <add key="webpages:Version" value="1.0.0.0" />
+    <add key="ClientValidationEnabled" value="true" />
+    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="DataConnectionString" value="UseDevelopmentStorage=true" />
+    <add key="log4net.Internal.Debug" value="false" />
+    <add key="RouteDebugger:Enabled" value="false" />
+  </appSettings>
+  <system.web>
+    <compilation debug="true" targetFramework="4.0">
+      <assemblies>
+        <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+        <add assembly="System.Web.Helpers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+        <add assembly="System.Web.Routing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+        <add assembly="System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+        <add assembly="System.Web.WebPages, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
+      </assemblies>
+    </compilation>
+    <authentication mode="Forms">
+      <forms loginUrl="~/Account/LogOn" timeout="2880" />
+    </authentication>
+    <pages>
+      <namespaces>
+        <add namespace="System.Web.Helpers" />
+        <add namespace="System.Web.Mvc" />
+        <add namespace="System.Web.Mvc.Ajax" />
+        <add namespace="System.Web.Mvc.Html" />
+        <add namespace="System.Web.Routing" />
+        <add namespace="System.Web.WebPages" />
+      </namespaces>
+    </pages>
+    <trace writeToDiagnosticsTrace="true" enabled="false" pageOutput="false" />
+  </system.web>
+  <system.webServer>
+    <modules runAllManagedModulesForAllRequests="true">
+      <add name="PerRequestLifestyle" type="Castle.MicroKernel.Lifestyle.PerWebRequestLifestyleModule, Castle.Windsor" />
+    </modules>
+  </system.webServer>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
+        <bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="3.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
+  <log4net>
+    <root>
+      <priority value="INFO" />
+      <appender-ref ref="AdoNetAppender" />
+    </root>
+    <logger name="NHibernate">
+      <level value="ERROR" />
+    </logger>
+    <appender name="AdoNetAppender" type="log4net.Appender.AdoNetAppender">
+      <bufferSize value="1" />
+      <connectionType value="System.Data.SqlClient.SqlConnection, System.Data, Version=1.0.3300.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+      <connectionString value="Data Source=.;Initial Catalog=Forum-db;Integrated Security=SSPI;Persist Security Info=False;" />
+      <commandText value="INSERT INTO LogEntry ([Date],[Thread],[Level],[Logger],[Message],[Exception],[Identifier],[Created],[Modified],[LoggingSource]) VALUES (@log_date, @thread, @log_level, @logger, @message, @exception,newid(), getdate(), getdate(), 'Forum Composite')" />
+      <parameter>
+        <parameterName value="@log_date" />
+        <dbType value="DateTime" />
+        <layout type="log4net.Layout.RawTimeStampLayout" />
+      </parameter>
+      <parameter>
+        <parameterName value="@thread" />
+        <dbType value="String" />
+        <size value="255" />
+        <layout type="log4net.Layout.PatternLayout">
+          <conversionPattern value="%thread" />
+        </layout>
+      </parameter>
+      <parameter>
+        <parameterName value="@log_level" />
+        <dbType value="String" />
+        <size value="50" />
+        <layout type="log4net.Layout.PatternLayout">
+          <conversionPattern value="%level" />
+        </layout>
+      </parameter>
+      <parameter>
+        <parameterName value="@logger" />
+        <dbType value="String" />
+        <size value="255" />
+        <layout type="log4net.Layout.PatternLayout">
+          <conversionPattern value="%logger" />
+        </layout>
+      </parameter>
+      <parameter>
+        <parameterName value="@message" />
+        <dbType value="String" />
+        <size value="4000" />
+        <layout type="log4net.Layout.PatternLayout">
+          <conversionPattern value="%message" />
+        </layout>
+      </parameter>
+      <parameter>
+        <parameterName value="@exception" />
+        <dbType value="String" />
+        <size value="2000" />
+        <layout type="log4net.Layout.ExceptionLayout" />
+      </parameter>
+    </appender>
+  </log4net>
 </configuration>
