--- a/apps/ForumComposite/packages.config
+++ b/apps/ForumComposite/packages.config
@@ -13,4 +13,5 @@
   <package id="log4net" version="1.2.10" />
   <package id="Modernizr" version="2.0.6" />
   <package id="NHibernate" version="3.2.0.4000" />
+  <package id="routedebugger" version="2.1.1" />
 </packages>
